install module SMTP and Mail System

--- a/config/default/language/vi/views.view.files.yml
+++ b/config/default/language/vi/views.view.files.yml
@@ -11,3 +11,7 @@ display:
         options:
           expose:
             items_per_page_label: 'Số mục trên một trang'
+      arguments:
+        fid:
+          exception:
+            title: 'Tất cả'
