--- a/config/default/language/vi/views.view.taxonomy_term.yml
+++ b/config/default/language/vi/views.view.taxonomy_term.yml
@@ -5,3 +5,7 @@ display:
         options:
           expose:
             items_per_page_label: 'Số mục trên một trang'
+      arguments:
+        tid:
+          exception:
+            title: 'Tất cả'
