--- a/config/default/language/vi/views.view.user_admin_people.yml
+++ b/config/default/language/vi/views.view.user_admin_people.yml
@@ -6,5 +6,7 @@ display:
           expose:
             items_per_page_label: 'Số mục trên một trang'
       fields:
+        name:
+          label: 'Tên người dùng'
         operations:
           label: 'Thao tác'
